# cii2b4-tubes-strukturdata

./: CMakeLists.txt  README.md  main.cpp
UDT/: date.cpp  date.h
modules/auth/: auth.cpp  auth.h
modules/auth/pseudo/: auth.pseudo
modules/book/: book-borrower.cpp  book.cpp  book.h
modules/book/pseudo/: book-borrower.pseudo  book.pseudo
modules/borrower/: borrower.cpp  borrower.h
modules/borrower/pseudo/: borrower.pseudo
modules/menu/: menu.cpp  menu.h
modules/menu/pseudo/: menu.pseudo
modules/user/: user.cpp  user.h
modules/user/pseudo/: user.pseudo
utils/: seed.cpp  seed.h
